simplified single scan flow
Signed-off-by: Jude Niroshan <jude.niroshan11@gmail.com>